[tool.poetry]
name = "ironcardio"
version = "0.1.0"
description = "A CLI tool to create, save, and track progress of Iron Cardio sessions."
authors = ["Russell Helmstedter <rhelmstedter@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/rhelmstedter/iron-cardio/"
repository = "https://github.com/rhelmstedter/iron-cardio/"
keywords = ["CLI", "kettlebells"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
